unpackaged/main/default/objects/sbaa__Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>sbaa__Opportunity__r.Account.Name + Quote__r.SBQQ__Opportunity2__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>