unpackaged/main/default/objects/sbaa__Approval__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>Text(sbaa__Opportunity__r.StageName)+TEXT( Quote__r.SBQQ__Opportunity2__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>